[package]
name = "oberst_proc"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/lionrexhepi/oberst"
homepage = "https://github.com/lionrexhepi/oberst"
readme = "../README.md"
license = "MIT"
description = "A type-safe command parser and dispatcher inspired by Brigadier and written in Rust."


[dependencies]
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full"]}


[lib]
proc_macro = true
